# taltech-secure-programming

./: README.md
hw01/: Cargo.toml
hw01/src/: main.rs
hw02/: Cargo.toml  README.md  rusty-tags.vi
hw02/src/: algorithms.rs  client.rs  common.rs  cracker.rs  main.rs  network.rs  server.rs  structures.rs
hw03/: Cargo.toml  README.md
hw03/src/: algorithms.rs  main.rs
hw04/: ${DATABASE_URL}  .env  .gitignore  Cargo.toml  Dockerfile  README.md  make_admin_admin.sql
hw04/migrations/2023-10-31-103510_users/: up.sql
hw04/migrations/2023-10-31-113002_roles/: up.sql
hw04/migrations/2023-10-31-113007_roles_users/: down.sql  up.sql
hw04/migrations/2023-10-31-113442_ceasar/: down.sql  up.sql
hw04/migrations/2023-10-31-113459_vigenere/: down.sql  up.sql
hw04/src/: database.rs  domain.rs  jwt.rs  login.rs  logout.rs  main.rs  models.rs  register.rs  roles.rs  schema.rs  security.rs  util.rs
hw04/src/api/: add_cipher.rs  common.rs  decrypt.rs  decrypt_cipher.rs  delete_cipher.rs  index.rs  login.rs  logout.rs  mod.rs  recover_cipher.rs  register.rs
hw04/src/domain/: ciphers.rs  database.rs  jwt.rs  mod.rs  roles.rs
hw04/static/: styles.css
hw04/templates/: base.html.tera  decrypted.html.tera  index.html.tera  login.html.tera  logout.html.tera  recover.html.tera  register.html.tera
hw04/templates/error/: 404.html.tera
rangeforces/: Cargo.toml  jwt.sh  php_remote_shell
rangeforces/src/: main.rs
