[package]
name = "hw02"
version = "0.1.0"
edition = "2021"
authors = ["Petr Laštovička"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
bit-vec = "0.6.3"
clap = { version = "4.4.5", features = ["derive"] }
exitcode = "1.1.2"
rand = "0.8.5"
seeded-random = "0.5.0"
