[package]
name = "brutus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
diesel = { version = "2.1.3", features = ["sqlite", "time", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenv = "0.15.0"
either = "1.9.0"
password-hash = "0.5.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["secrets", "json", "uuid"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tera = "1.19.1"
uuid = "1.5.0"

